src/assets/themes/rub.sass
@import "../layout"

//TODO move all this to configurable variables
$background: whitesmoke !default
$default-font-family: Cambria, sans-serif
$default-titles-font-family: Georgia, serif !default
$details-font-size: 0.9em !default
$details-color: lighten($default-font-color, 40%) !default
$time-color: lighten($default-font-color, 30%) !default
$time-font-size: 0.95em !default
$contact-font-size: 0.89em !default
$title-font-size: 2.3em !default
$header-line-height: 2em !default
$section-separation: 0.7em !default
$item-separation: 0.2em !default

.page
  box-sizing: border-box
  background-color: $background

body
  margin: 0
  padding: 0
  /*line-height: 1pt;*/
  text-rendering: optimizeLegibility
  -webkit-font-smoothing: antialiased
  -moz-osx-font-smoothing: grayscale
  font-family: $default-font-family

  .resume
    width: 100%
    height: 100%
    position: relative

    #profile-section
      display: flex
      width: 100%
      position: relative

      .picture
        position: absolute
        top: -2em
        right: 0
        width: 1.2in
        height: 1.2in
        overflow: hidden
        border-radius: 50% // or 50% for circular
        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1)
        border: 1px solid #ccc
        background-color: white
        display: flex
        align-items: center
        justify-content: center

        img
          width: 100%
          height: 100%
          object-fit: cover

      .title
        position: relative
        text-transform: uppercase
        font-size: $title-font-size
        padding: 0
        font-family: $default-titles-font-family

        .name
          font-weight: bold
          color: var(--c-resume-builder-highlight-color)

        .role
          font-size: 0.55em
          font-style: italic



    .section
      width: 100%
      position: relative
      margin-top: $section-separation
      margin-bottom: 0

      &#profile-section
        margin-top: 0
        margin-bottom: 0

      &#contact-section
        display: flex
        flex-direction: row
        flex-wrap: wrap
        //justify-content: space-between
        align-items: center
        gap: 2em
        font-size: $contact-font-size
        width: 80%
        margin-bottom: 2.5em
        .icon
          width: 1em
        > *
          flex: 0 1 auto
          white-space: nowrap

      &#summary-section
        .section-title::before
          content: "\f007"
      &#work-section
        .section-title::before
          content: "\f0b1"
      &#projects-section
        .section-title::before
          content: "\f542"
      &#publications-section
        .section-title::before
          content: "\f02d"
      &#conference-section
        .section-title::before
          content: "\f130"
      &#education-section
        .section-title::before
          content: "\f19d"
      &#certificates-section
        .section-title::before
          content: "\f559"
      &#skills-section
        .section-title::before
          content: "\f5dc"
      &#awards-section
        .section-title::before
          content: "\f091"
      &#languages-section
        .section-title::before
          content: "\f1ab"
      &#interests-section
        .section-title::before
          content: "\f005"
      &#extras-section
        .section-title::before
          content: "\f196"

      .section-title
        font-family: $default-titles-font-family
        font-size: 1.15em
        margin-bottom: 0.25em

        &::before
          position: absolute
          right: 100%
          margin-right: 0.2em
          top: 0.1em
          //left: -1.2em
          min-width: 1em
          width: 1.2em
          text-align: center
          font-family: "Font Awesome 6 Free"
          font-weight: 900

        span
          text-transform: uppercase
          font-weight: bold
          color: var(--c-resume-builder-highlight-color)
          border-top: 1px solid
          border-bottom: 1px solid
          display: inline-block
          width: 100%

    .timeline
      position: relative
      .title
        position: relative
        .name
          position: relative

        &::before
          content: " "
          background-color: whitesmoke
          position: absolute
          display: inline-block
          $circle-size: 0.75em
          width: $circle-size
          height: $circle-size
          border-radius: 999999px
          z-index: 1
          border: 0.065cm solid black
          top: 0
          bottom: 0
          margin: auto 0
          left: -1.18em
          $pointSpace: 0.35em
          box-shadow: 0 $pointSpace 0 whitesmoke, 0 calc(#{$pointSpace} * -1) 0 whitesmoke



      &::after
        content: ""
        background-color: slategray
        position: absolute
        bottom: 0.29em
        left: -1em
        top: 0.5em
        width: 0.06cm
        border-right: 3em

  .item
    width: 100%
    &.skill
      margin-bottom: 0.3em
    .header
      line-height: $header-line-height
      vertical-align: middle
      align-items: baseline
      display: flex
      font-size: 1.1em

      .title
        font-weight: bold

      .details
        font-size: $details-font-size
        color: $details-color
        font-weight: bold

        &.name
          text-transform: capitalize

        &.location
          font-style: italic

        &.time
          font-style: normal
          margin-left: auto
          color: $time-color
          font-size: $time-font-size
      //  text-align: right
      //  float: right
      .separator
        margin: 0 0.4em

    .description
      white-space: pre-line

      .summary
        padding-bottom: 0.5em
        font-size: 1em

      .item-list
        margin: 0
        padding: 0 0 0 2em

        .item
          margin-top: $item-separation

          &:first-of-type
            margin-top: 0

    &.item
      .title
        font-weight: bold

  .icon
    margin-right: 0.25em
    height: 1em


.separator
  margin: 0 0.4em

.flex
  display: flex

